// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBarMenuItem > should render active item and match snapshot 1`] = `
<DocumentFragment>
  <li>
    <a
      aria-current="page"
      class="el-side-bar-menu-item-anchor el-side-bar-menu-item"
      href="/#"
    >
      <span
        class="mocked-styled-1 el-side-bar-menu-item-icon"
      >
        <div />
      </span>
      <span
        class="mocked-styled-0 el-side-bar-menu-item-text"
      >
        a link
      </span>
    </a>
  </li>
</DocumentFragment>
`;

exports[`SideBarMenuItem > should render item and match snapshot 1`] = `
<DocumentFragment>
  <li>
    <a
      class="el-side-bar-menu-item-anchor el-side-bar-menu-item"
      href="#"
    >
      <span
        class="mocked-styled-1 el-side-bar-menu-item-icon"
      >
        <div />
      </span>
      <span
        class="mocked-styled-0 el-side-bar-menu-item-text"
      >
        a link
      </span>
    </a>
  </li>
</DocumentFragment>
`;
